tests/ui/higher-ranked/subtype/hr-subtype.bound_inv_a_b_vs_bound_inv_a.stderr
error[E0308]: mismatched types
  --> $DIR/hr-subtype.rs:54:26
   |
LL |               gimme::<$t1>(None::<$t2>);
   |               ------------ ^^^^^^^^^^^ one type is more general than the other
   |               |
   |               arguments to this function are incorrect
...
LL | / check! { bound_inv_a_b_vs_bound_inv_a: (for<'a,'b> fn(Inv<'a>, Inv<'b>),
LL | | for<'a>    fn(Inv<'a>, Inv<'a>)) }
   | |__________________________________- in this macro invocation
   |
   = note: expected enum `Option<for<'a, 'b> fn(Inv<'a>, Inv<'b>)>`
              found enum `Option<for<'a> fn(Inv<'a>, Inv<'a>)>`
note: function defined here
  --> $DIR/hr-subtype.rs:30:4
   |
LL | fn gimme<T>(_: Option<T>) {}
   |    ^^^^^    ------------
   = note: this error originates in the macro `check` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
